Fix sticky nav visibility.

--- a/components/Header/index.scss
+++ b/components/Header/index.scss
@@ -50,7 +50,7 @@
     &--sticky {
       position: fixed;
       top: 0;
-      z-index: 2;
+      z-index: 3;
       animation-name: fadeIn;
       animation-duration: .5s;
       background-color: #383b3c;
